@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 3.4.0
 Date: ????
-  Changes:
+  Features:
+    - New interactions:
+      - [Entity] Shift + click to get a blueprint (not just on the recipe screen)
 ---------------------------------------------------------------------------------------------------
 Version: 3.3.4
 Date: 2022-04-20
